--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "passport": "latest",
     "passport-local": "latest",
     "ejs": "~0.8.4",
-    "ntwitter": "~0.5.0"
+    "ntwitter": "~0.5.0",
+    "mongodb": "~1.3.23"
   },
   "repository": {
     "type": "git",
