moved ntwitter to local lib folder.
undid remove from package.json file as this was cleaner/temp fix.

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-node_modules/grunt*
-node_modules/time-grunt
-node_modules/load-grunt-tasks
-node_modules/lodash
-node_modules/.bin
-node_modules/connect*
-node_modules/ejs
-node_modules/express
-node_modules/karma*
-node_modules/mongo*
-node_modules/passport*
-node_modules/jshint*
-node_modules/jpegtran*
-node_modules/requirejs
+node_modules
 public
 .tmp
 .sass-cache
