--- a/package.json
+++ b/package.json
@@ -4,13 +4,28 @@
   "dependencies": {
     "express": "~3.4.3",
     "lodash": "~2.4.1",
-    "mongoose": "~3.5.5",
+    "mongoose": "~3.5.16",
     "mongoose-unique-validator": "~0.3.0",
     "connect-mongo": "~0.4.0",
     "passport": "latest",
     "passport-local": "latest",
     "ejs": "~0.8.4",
-    "mongodb": "~1.3.23"
+    "mongodb": "~1.3.23",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-newer": "~0.5.4",
+    "grunt-contrib-compass": "~0.6.0",
+    "time-grunt": "~0.2.10",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-bower-install": "~0.7.0",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "load-grunt-tasks": "~0.2.1",
+    "grunt-autoprefixer": "~0.4.2",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-svgmin": "~0.2.1",
+    "jpegtran-bin": "~0.2.0",
+    "grunt-contrib-imagemin": "~0.3.0"
   },
   "repository": {
     "type": "git",
