--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,6 @@
   "devDependencies": {
     "angular-mocks": "1.2.13",
     "angular-scenario": "1.2.13"
-  }
+  },
+  "testPath": "test/client/spec"
 }
