--- a/package.json
+++ b/package.json
@@ -4,28 +4,11 @@
   "dependencies": {
     "express": "~3.4.3",
     "lodash": "~2.4.1",
-    "mongoose": "~3.5.16",
-    "mongoose-unique-validator": "~0.3.0",
+    "mongoose": "~3.8.8",
     "connect-mongo": "~0.4.0",
-    "passport": "latest",
-    "passport-local": "latest",
-    "ejs": "~0.8.4",
-    "mongodb": "~1.3.23",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-newer": "~0.5.4",
-    "grunt-contrib-compass": "~0.6.0",
-    "time-grunt": "~0.2.10",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-bower-install": "~0.7.0",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "load-grunt-tasks": "~0.2.1",
-    "grunt-autoprefixer": "~0.4.2",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-svgmin": "~0.2.1",
-    "jpegtran-bin": "~0.2.0",
-    "grunt-contrib-imagemin": "~0.3.0"
+    "passport": "~0.2.0",
+    "passport-local": "~0.1.6",
+    "ejs": "~0.8.4"
   },
   "repository": {
     "type": "git",
@@ -51,8 +34,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-htmlmin": "~0.1.3",
-    "jpegtran-bin": "0.2.0",
-    "grunt-contrib-imagemin": "~0.3.0",
+    "grunt-contrib-imagemin": "~0.5.0",
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
@@ -80,7 +62,14 @@
     "karma-coffee-preprocessor": "~0.1.2",
     "karma-phantomjs-launcher": "~0.1.1",
     "karma": "~0.10.9",
-    "karma-ng-html2js-preprocessor": "~0.1.0"
+    "karma-ng-html2js-preprocessor": "~0.1.0",
+    "grunt-mocha-test": "~0.8.1",
+    "supertest": "~0.8.2",
+    "should": "~2.1.0",
+    "grunt-env": "~0.4.1",
+    "grunt-node-inspector": "~0.1.3",
+    "grunt-nodemon": "~0.2.0",
+    "open": "~0.0.4"
   },
   "engines": {
     "node": ">=0.10.22"
