--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-resource": "1.2.13",
     "angular-cookies": "1.2.13",
     "angular-sanitize": "1.2.13",
-    "angular-route": "1.2.13"
+    "angular-route": "1.2.13",
+    "d3": "~3.4.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.13",
