--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "twitvizual",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
-    "express": "~3.4.3",
+    "connect-mongo": "~0.4.0",
+    "cookies": "^0.4.1",
+    "ejs": "^0.8.8",
+    "express": "^3.12.1",
+    "keygrip": "^1.0.1",
     "lodash": "~2.4.1",
     "mongoose": "~3.8.8",
-    "connect-mongo": "~0.4.0",
+    "oauth": "^0.9.12",
     "passport": "~0.2.0",
-    "passport-local": "~0.1.6",
-    "ejs": "~0.8.4"
+    "passport-local": "^0.1.6"
   },
   "repository": {
     "type": "git",
