--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "twitvizual",
   "version": "0.0.1",
   "dependencies": {
-    "connect-mongo": "~0.4.0",
+    "connect-mongo": "~0.4.1",
     "cookies": "~0.4.1",
     "ejs": "~0.8.8",
     "express": "~3.12.1",
     "keygrip": "~1.0.1",
     "lodash": "~2.4.1",
-    "mongoose": "~3.8.8",
     "oauth": "~0.9.12",
     "passport": "~0.2.0",
-    "passport-local": "~0.1.6"
+    "passport-local": "~0.1.6",
+    "mongoose": "~3.8.20"
   },
   "repository": {
     "type": "git",
