--- a/bower.json
+++ b/bower.json
@@ -2,20 +2,20 @@
   "name": "twit-vizual",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.13",
+    "angular": "~1.3.15",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "~1.11.0",
     "bootstrap": "~3.1.1",
-    "angular-resource": "1.2.13",
-    "angular-cookies": "1.2.13",
-    "angular-sanitize": "1.2.13",
-    "angular-route": "1.2.13",
+    "angular-resource": "~1.3.15",
+    "angular-cookies": "~1.3.15",
+    "angular-sanitize": "~1.3.15",
+    "angular-route": "~1.3.15",
     "d3": "~3.4.3"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.13",
-    "angular-scenario": "1.2.13"
+    "angular-mocks": "~1.3.15",
+    "angular-scenario": "~1.3.15"
   },
   "testPath": "test/client/spec"
 }
